src/snapshots/grider__tests__grid_custom_config_1.snap
---
source: src/main.rs
expression: grid
snapshot_kind: text
---
rows:
  - y: 0
    height: 20
    kind: Full
columns:
  - x: 0
    width: 20
    kind: Full
