src/snapshots/grider__tests__process_lines_large_image.snap
---
source: src/main.rs
expression: rows
snapshot_kind: text
---
- y: 0
  height: 5
  kind: Empty
- y: 5
  height: 5
  kind: Full
